# openg2p-uca

./: .copier-answers.yml  .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  Readme_SQL.md  agent.py  combined_agent.py  createDB.py  create_db.py  create_embeddings.py  dbagent.py  deepseek_agent.py  docker-compose.yml  http_test.py  lib.py  lib_alter.py  lib_for_sql.py  lib_new.py  main.py  new_agent.py  program_retriever.py  pyproject.toml  requirement.txt  service.py  service_alter.py  service_combined_agent.py  test-requirements.txt
Data/: data.csv  g2p_eligibility_rule_definition_Sheet1.1.csv
FastMCP/: eligibility_server.py  grievance_server.py  main.py  mcp_client.py
MCP/: conversation_manager.py  eligibility_subsystem.py  grievance_subsystem.py  main.py  mcp_server.py  original_code.py  original_grievance.py  social_benefits_mcp.py  tools.py  utils.py
STT/: README.md  (+2 more)
openg2p-llm-common/: README.md  pyproject.toml
openg2p-llm-common/src/openg2p_llm_common/: app.py  config.py  errors.py
openg2p-llm-common/src/openg2p_llm_common/schemas/: chat.py  ollama.py  tools.py
openg2p-llm-common/src/openg2p_llm_common/services/: agents.py  chat_store.py  ollama_client.py
openg2p-llm-common/src/openg2p_llm_common/services/stt/: base.py  vosk.py
openg2p-llm-common/src/openg2p_llm_common/services/tools/: base.py  box.py  change_agent.py
openg2p-llm-common/src/openg2p_llm_common/services/tts/: base.py  parler.py
openg2p-llm-common/src/openg2p_llm_common/utils/: timing.py
openg2p-llm-common/tests/: test_init.py
(+82 files in other folders)
