[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openg2p-llm-common"
authors = [
  { name="OpenG2P", email="info@openg2p.org" },
]
description = "OpenG2P Library for common components, APIs and tools related to LLMs"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Operating System :: OS Independent",
]
dependencies = [
  "openg2p-fastapi-common ~=1.1.2",
]
dynamic = ["version"]

[project.optional-dependencies]
stt-vosk = ["ffmpeg-python", "vosk"]
tts-parler = ["transformers", "parler-tts @ git+https://github.com/huggingface/parler-tts.git"]

[project.urls]
Homepage = "https://openg2p.org"
Documentation = "https://docs.openg2p.org/"
Repository = "https://github.com/OpenG2P/openg2p-uca"
Source = "https://github.com/OpenG2P/openg2p-uca"

[tool.hatch.version]
path = "src/openg2p_llm_common/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true
